--- a/_posts/大数据/2018-07-21-hadoop问题记录.md
+++ b/_posts/大数据/2018-07-21-hadoop问题记录.md
@@ -2,9 +2,10 @@
 layout: post
 category: 大数据
 ---
+
 #1 HDFS 问题
 
-* [x] does not have any open files
+##1.1 HDFS does not have any open files
  `
   [MainThread] WARN  org.apache.hadoop.security.UserGroupInformation  - PriviledgedActionException as:ads_db (auth:SIMPLE) cause:org.apache.hadoop.ipc.RemoteException(org.apache.hadoop.hdfs.server.namenode.LeaseExpiredException): No lease on /user/ads_db/oozie-oozi/0009835-151204024716154-oozie-oozi-W/orion_report_new--pig/output/_temporary/1/_temporary/attempt_1448953762828_116807_m_000000_0/part-00000 (inode 18580914): File does not exist. Holder DFSClient_attempt_1448953762828_116807_m_000000_0_-190684571_1 does not have any open files.
 	        at org.apache.hadoop.hdfs.server.namenode.FSNamesystem.checkLease(FSNamesystem.java:3605)
@@ -23,7 +24,8 @@ category: 大数据
 	        at org.apache.hadoop.security.UserGroupInformation.doAs(UserGroupInformation.java:1671)
 	     at org.apache.hadoop.ipc.Server$Handler.run(Server.java:2038)
  `
-* 【解决方法】
+ 
+* [x] 【解决方法】
 Hadoop HDFS Datanode 有一个同时处理文件的上限默认为4096，x2增长原则，修改为8192
 
 ```
