--- a/_posts/后端/AWS/2018-07-21-AWS.md
+++ b/_posts/后端/AWS/2018-07-21-AWS.md
@@ -9,8 +9,8 @@ category: 后端
 ## 2.1 S3 Command
 ### 2.1.1 复制文件(正则表达式)
 ```
-aws s3 cp s3://ijinshan/infoc2.cm.ksmobile.com/ ./ --recursive --include "E2WJDUAXKAHT4N.2015-08-12-*.ffb06261.gz" --exclude "*"
-aws s3 cp s3://ijinshan/infoc2.cm.ksmobile.com/ s3://ijinshan/wangbokun --recursive --include E2WJDUAXKAHT4N.2015-08-12-*.gz --exclude *
-aws s3 cp s3://ijinshan/infoc2.cm.ksmobile.com/ ./ --recursive --exclude "*" --include "E2WJDUAXKAHT4N.2015-08-12-*" --profile kun
+aws s3 cp s3://xxxx/infoc2.cm.xxx.com/ ./ --recursive --include "E2WJDUAXKAHT4N.2015-08-12-*.ffb06261.gz" --exclude "*"
+aws s3 cp s3://xxx/infoc2.cm.xxx.com/ s3://xxx/wangbokun --recursive --include E2WJDUAXKAHT4N.2015-08-12-*.gz --exclude *
+aws s3 cp s3://xxx/infoc2.cm.xxx.com/ ./ --recursive --exclude "*" --include "E2WJDUAXKAHT4N.2015-08-12-*" --profile kun
 ``` 
 
