--- a/_posts/大数据/2018-07-21-hadoop配置.md
+++ b/_posts/大数据/2018-07-21-hadoop配置.md
@@ -3,8 +3,14 @@ layout: post
 category: 大数据
 ---
 
-# 1 HDFS配置
-# 2 Yarn配置
+# 1 HDFS
+## 1.1 HDFS 开启webhdfs
+cloudera manager->hdfs->实例-> 添加角色-> HttpFS角色选择主机
+
+```
+curl -i  "http://127.0.0.1:14000/webhdfs/v1/user/root/?op=LISTSTATUS&user.name=root"
+```
+# 2 Yarn
 
 * RAM-per-container is minimum-allocation-mb ，一般设置为1024m.
 
