--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -12,7 +12,7 @@ category: 运维
 
 | 变量名 | 含义 |备注  |
 | --- | --- | --- |
-|{{ ansible_hostname }}|  获取主机名| 必须注释# gather_facts: False |
+|ansible_hostname |  获取主机名| 必须注释# gather_facts: False |
 
 
 
