--- a/_posts/大数据/2018-07-31-Presto.md
+++ b/_posts/大数据/2018-07-31-Presto.md
@@ -15,10 +15,10 @@ Presto是由Facebook开源，完全基于内存的并行计算以及分布式SQL
 Presto是一个运行在多台服务器上的分布式系统。 完整安装包括一个coordinator和多个worker。 由客户端提交查询，从Presto命令行CLI提交到coordinator。 coordinator进行解析，分析并执行查询计划，然后分发处理队列到worker。
 ![](/assets/img/15331762381049.jpg)
 
-# 2 Presto并与Hive集成【CDH5】
+# 2 Presto Hive 【CDH5】
 
 
-## 2.1.1 download  presto
+## 2.1.1 download
 ```
 wget https://repo1.maven.org/maven2/com/facebook/presto/presto-server/0.205/presto-server-0.205.tar.gz
 ``` 
@@ -32,8 +32,9 @@ IP | 角色
 10.10.10.5 | worker
 10.10.10.6 | worker
 
-## 2.1.2 install JAVA && $PATH 忽略不写
-## 2.1.3 配置文件修改
+## 2.1.2 install JAVA
+ 忽略不写
+## 2.1.3 配置文件
 
 ```
 #需要新增一下配置worker-config.properties && coordinator-config.properties 部署在对应的角色服务器上，并重命名为config.properties
@@ -149,5 +150,24 @@ mv presto-cli-0.205-executable.jar presto-cli&& chmod 755 presto-cli
 
 ![](/assets/img/15331808826609.jpg)
 
+## 2.1.5  s3
 
+```
+connector.name=hive-hadoop2
+hive.metastore.uri={{ hive_metastore_uri }}
+hive.config.resources=/etc/hadoop/conf/core-site.xml,/etc/hadoop/conf/hdfs-site.xml
+hive.s3.connect-timeout=2m
+hive.s3.max-backoff-time=10m
+hive.s3.pin-client-to-current-region=false
+hive.s3.aws-access-key=xxxxx
+hive.s3.aws-secret-key=xxxxxxxx
+hive.s3.endpoint=s3.cn-north-1.amazonaws.com.cn
+
+```
+## 2.1.6 Hue presto hive
+
+```
+yum install https://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-7-x86_64/pgdg-redhat94-9.4-3.noarch.rpm
+yum install postgresql94-server postgresql94-contrib postgresql94-devel postgresql94-plpython
+```
 
