--- a/_posts/运维/2018-07-23-grafana.md
+++ b/_posts/运维/2018-07-23-grafana.md
@@ -7,7 +7,7 @@ category: 运维
 
 # 1 概述
 # 2 API
-# 2.2.1 api导出dashboard json文件
+## 2.2.1 api导出dashboard json文件
 > 背景,因为配置错误，强制保存，导致dashboard页面空白，通过api导出json，重建页面
 
 - 配置-〉API keys-〉add【viewer】->生成 String Key
@@ -33,5 +33,11 @@ category: 运维
  #返回json string，掐头，保留{"annotations":xxx}相关信息. 手动回滚，再从主页import这段信息
  
 ```
+## 2.2.2 首页修改
 
+新建一个page 自定义内容后，拷贝json内容，覆盖此文件
+
+```
+/usr/share/grafana/public/dashboards/home.json
+```
 
