--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -4,6 +4,7 @@ category: 运维
 ---
 
 > ansible
+> https://www.jianshu.com/u/ace85431b4bb
 
 
 # 1 概述
@@ -13,7 +14,105 @@ category: 运维
 | 变量名 | 含义 |备注  |
 | --- | --- | --- |
 |ansible_hostname |  获取主机名| 必须注释# gather_facts: False |
+# 3 Ansible-Tower部署and破解
+## 3.1.1 安装ansible-tower-setup-3.2.5
 
+```
+wget http://releases.ansible.com/ansible-tower/setup/ansible-tower-setup-latest.tar.gz -P /data/tower/
+cd /data/tower/
+tar xvf ansible-tower-setup-latest.tar.gz -C ./
+cd ansible-tower-setup-3.2.5/
+```
+编辑inventory配置文件如下
+
+
+```
+[tower]
+localhost ansible_connection=local
+
+[database]
+
+[all:vars]
+admin_password='xxxx'
+
+pg_host='127.0.0.1'
+pg_port='5432'
+
+pg_database='awx'
+pg_username='awx'
+pg_password='awx'
+
+rabbitmq_port=5672
+rabbitmq_vhost=tower
+rabbitmq_username=tower
+rabbitmq_password='tower'
+rabbitmq_cookie=cookiemonster
+
+# Needs to be true for fqdns and ip addresses
+rabbitmq_use_long_name=false
+
+# Isolated Tower nodes automatically generate an RSA key for authentication;
+# To disable this behavior, set this value to false
+# isolated_key_generation=true
+```
+
+运行安装脚本
+
+```
+sh setup.sh
+```
+![](/assets/img/15336280609790.jpg)
+## 3.1.2 破解
+访问tower：https://10.10.10.1，默认用户名为admin密码为inventory文件中设置的admin_password='admin'
+![](/assets/img/15336281451514.jpg)
+
+
+我是centos7，找到安装目录文件地址如下
+
+```
+# ll /var/lib/awx/venv/awx/lib/python2.7/site-packages/awx/main/tasks.py*
+-rw-r--r--. 1 root root 82616 8月   7 15:43 /var/lib/awx/venv/awx/lib/python2.7/site-packages/awx/main/tasks.pyc
+-rw-r--r--. 1 root root 82569 8月   7 15:43 /var/lib/awx/venv/awx/lib/python2.7/site-packages/awx/main/tasks.pyo
+```
+
+首先下载python反编译工具
+
+
+```
+pip install uncompyle2
+```
+
+反编译文件tasks.pyc
+
+
+```
+#反编译文件
+uncompyle6 task.pyc >/tmp/task.py
+```
+
+```
+#141行添加
+ 141     validation_info.get('instance_count', 0) = 9999999
+```
+![](/assets/img/15336283712765.jpg)
+
+
+
+```
+# 删除加密文件
+mv /var/lib/awx/venv/awx/lib/python2.7/site-packages/awx/main/tasks.py* ~/bak/
+#拷贝修改后文件到此目录
+cp /tmp/tasks.py /var/lib/awx/venv/awx/lib/python2.7/site-packages/awx/main/
+
+#重启服务
+ansible-tower-service restart
+```
+
+查看修改后效果,settings=>view your license
+
+![](/assets/img/15336285952969.jpg)
+
+![](/assets/img/15336286092415.jpg)
 
 
 
