--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -8,6 +8,7 @@ category: 运维
 
 
 # 1 概述
+> https://kionf.com/2018/07/06/zabbix-alarm-phone
 # 2 ansible-playbooks
 # 2.1.1 内置变量
 
@@ -15,6 +16,7 @@ category: 运维
 | --- | --- | --- |
 |ansible_hostname |  获取主机名| 必须注释# gather_facts: False |
 # 3 Ansible-Tower部署and破解
+>API文档 https://docs.ansible.com/ansible-tower/2.3.0/html/towerapi/intro.html
 ## 3.1.1 安装ansible-tower-setup-3.2.5
 
 ```
@@ -114,5 +116,14 @@ ansible-tower-service restart
 
 ![](/assets/img/15336286092415.jpg)
 
+## 3.2.1 Tower使用
+> http://doubikang.com/2017/10/14/hello-world/
+
+
+创建登录凭证
+SETTINGS -> CREDENTIALS -> CREATE CREDENTIAL
+Name自定义，然后选择type
+![](/assets/img/15336290707238.jpg)
+接下来填写自己的用户名密码或者key
 
 
