--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -125,5 +125,21 @@ SETTINGS -> CREDENTIALS -> CREATE CREDENTIAL
 Name自定义，然后选择type
 ![](/assets/img/15336290707238.jpg)
 接下来填写自己的用户名密码或者key
+## 3.2.2 Tower 静态文件
+
+- 静态文件目录/var/lib/awx/public/static
+
+```
+修改logo： 
+/var/lib/awx/public/static/assets/logo-header.svg
+/var/lib/awx/public/static/assets/logo-login.svg
+```
+## 3.2.3 tower数据迁移
+* [x] 数据导出：
+pg_dump -U awx  -p 5432 awx -f awx
+
+* [ ] 数据导入：
+
+
 
 
