--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -69,6 +69,16 @@ sh setup.sh
 ![](/assets/img/15336281451514.jpg)
 
 
+先修改这个文件，不然后面破解不成功
+
+```
+vim /var/lib/awx/venv/awx/lib/python2.7/site-packages/tower_license/__init__.py
+
+119     def _check_cloudforms_subscription(self):
+120         return True
+121         #if os.path.exists('/var/lib/awx/i18n.db'):
+122         #    return True
+```
 我是centos7，找到安装目录文件地址如下
 
 ```
