--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -5,6 +5,8 @@ category: 运维
 
 > ansible
 > https://www.jianshu.com/u/ace85431b4bb
+> Tower API ：https://docs.ansible.com/ansible-tower/latest/html/towerapi/browseable.html
+> Tower Documentation: https://docs.ansible.com/ansible-tower/latest/html/administration/ldap_auth.html
 
 
 # 1 概述
