--- a/_posts/运维/ansible/2018-07-31-ansible.md
+++ b/_posts/运维/ansible/2018-07-31-ansible.md
@@ -152,6 +152,37 @@ pg_dump -U awx  -p 5432 awx -f awx
 
 * [ ] 数据导入：
 
+# 4 books-gitlib-jenkins-tower
+## 4.1 gitlab webhook 调用jenkins同步数据
+配置jenkins
+![](/assets/img/15338110904287.jpg)
 
 
+![](/assets/img/15338111470219.jpg)
+
+这个URL配置在gitlab中的webhook里面
+
+![](/assets/img/15338112262843.jpg)
+build后同步数据
+![](/assets/img/15338112750661.jpg)
+
+
+```
+echo "Hello word!"
+SOURCE_DIR=/data/workspace/workspace/xxxx/ansible-playbooks/
+DEST_DIR=/data/ansible-playbooks/
+REMOTE_IP=xxxx
+REMOTE_USER=awx
+/usr/bin/rsync  -e "ssh -p22" -avpgolr --delete-before $SOURCE_DIR $REMOTE_USER@$REMOTE_IP:$DEST_DIR
+echo "end~ nice"
+```
+## 4.2 tower配置目录
+
+
+```
+ vim /etc/tower/settings.py
+ PROJECTS_ROOT = '/data/ansible-playbooks‘
+```
+
+然后Tower中就可以使用仓库中的books
 
