--- a/_posts/数学/2018-07-23-概率论.md
+++ b/_posts/数学/2018-07-23-概率论.md
@@ -6,18 +6,60 @@ category: 数学
 
 # 1  概述
 > md中如何使用公式参考:https://www.zybuluo.com/codeep/note/163962
-## 1.1  概率的数学定义
-掷骰子，点数为1的概率是1/6
-掷骰子600次，大约有100次结果为1 
+## 1.1  朴素贝叶斯分类器
 
+0= True
+1= False
 
-$ \Omega $
+| 考挂了$(Y)$ | 喝酒 $(x_1)$|逛街 $(x_2)$ |学习$(x_3)$|
+| --- | --- | --- |---|
+|  1| 1 | 1 |0|
+|0|0|0|1|
+|0|1|0|1|
+|1|1|0|0|
+|1|0|1|0|
+|0|0|1|1|
+|0|0|1|0|
+|1|0|0|1|
 
-$ \omega $
+$ y = f(x)$
 
+贝叶斯公式:
+$P(A|B)=\frac{P(B|A)P(A)}{P(B)}$
 
-$ \log_2 10 $
+利用贝叶斯公式计算考过概率(不喝酒，不逛街，学习)[0,0,1]
 
-$$ \sum $$
  
+$P(y|x_1x_2x_3)=\frac{P(x_1x_2x_3|y)P(y)}{P(x_1x_2x_3)}$
+
+$P(y|x_1x_2x_3)=P(x_1|y)P(x_2|y)P(x_3|y)P(y)$
+
+令: 
+$y=0$
+$x_1=0$
+$x_2=0$
+$X_3=1$
+
+则考过的概率为：
+
+$P(y|x_1x_2x_3)=P(x_1|y)P(x_2|y)P(x_3|y)P(y)$
+$P(y|x_1x_2x_3)=P(0|0)P(0|0)P(1|0)P(0)$
+$P(y|x_1x_2x_3)=\frac{3}{4} * \frac{2}{4} * \frac{3}{4} * \frac{1}{2} = \frac{18}{128}$
+
+同样条件计算考挂科的概率为:
+令: 
+$y=1$
+$x_1=0$
+$x_2=0$
+$X_3=1$
+
+$P(y|x_1x_2x_3)=P(x_1|y)P(x_2|y)P(x_3|y)P(y)$
+$P(y|x_1x_2x_3)=P(0|1)P(0|1)P(1|1)P(1)$
+$P(y|x_1x_2x_3)=\frac{1}{2} * \frac{1}{2} * \frac{1}{4} * \frac{1}{2} = \frac{4}{128}$
+
+
+因为
+$\frac{18}{128} > \frac{4}{128}$
+
+所以【不喝酒，不逛街，学习】考过的概率大于挂科的概率
 
