--- a/_posts/数学/2018-07-23-概率论.md
+++ b/_posts/数学/2018-07-23-概率论.md
@@ -2,12 +2,15 @@
 layout: post
 category: 数学
 ---
-> 程序员的数学2-概率论
+> 程序员的数学2-概率论之贝叶斯
 
 # 1  概述
 > md中如何使用公式参考:https://www.zybuluo.com/codeep/note/163962
 ## 1.1  朴素贝叶斯分类器
+选择高概率对应的类别，这就是贝叶斯抉择理论的核心思想
+即：选择具有高概率的决策
 
+### 1.1.1 贝叶斯 案例一
 0= True
 1= False
 
