--- a/_posts/大数据/2018-07-31-Presto.md
+++ b/_posts/大数据/2018-07-31-Presto.md
@@ -143,6 +143,7 @@ mv presto-cli-0.205-executable.jar presto-cli&& chmod 755 presto-cli
 
 [root@ presto-etc]# ./presto-cli --server localhost:8080 --catalog=hive --schema=default
 ```
+![](/assets/img/15356118719282.jpg)
 
 
 
@@ -164,10 +165,35 @@ hive.s3.aws-secret-key=xxxxxxxx
 hive.s3.endpoint=s3.cn-north-1.amazonaws.com.cn
 
 ```
-## 2.1.6 Hue presto hive
+## 2.1.6 Hue presto hive 【未通过】
 
 ```
 yum install https://download.postgresql.org/pub/repos/yum/9.4/redhat/rhel-7-x86_64/pgdg-redhat94-9.4-3.noarch.rpm
 yum install postgresql94-server postgresql94-contrib postgresql94-devel postgresql94-plpython
 ```
+# 3 presto安全认证
+## 3.1.1 Kerberos
+
+- Hive配置文件新增以下内容../etc/catalog/hive.properties
+ 
+```
+hive.metastore.authentication.type=KERBEROS
+hive.metastore.service.principal=hive/xxx@xxxx.COM
+hive.metastore.client.principal=presto@xxxx.COM
+hive.metastore.client.keytab=/etc/presto/presto.keytab
+
+
+hive.hdfs.authentication.type=KERBEROS
+hive.hdfs.impersonation.enabled=false
+hive.hdfs.presto.principal=presto@xxxx.COM
+hive.hdfs.presto.keytab=/etc/presto/presto.keytab
+hive.fs.cache.max-size=10
+hive.max-partitions-per-scan=100
+```
+- core-site中添加以下
+![](/assets/img/15356135380229.jpg)
+
+然后可以查询成功
+![](/assets/img/15356136674740.jpg)
+
 
