--- a/_posts/大数据/2018-07-21-hadoop.md
+++ b/_posts/大数据/2018-07-21-hadoop.md
@@ -3,14 +3,28 @@ layout: post
 category: 大数据
 ---
 
-# 1 HDFS
-## 1.1 HDFS 开启webhdfs
-cloudera manager->hdfs->实例-> 添加角色-> HttpFS角色选择主机
+# 1 概述
+
+
+#2 HDFS
+## 2.1.1 Httpfs
+
+
+| 配置 | value | 说明  |
+| --- | --- | --- |
+| hdfs.httpfs.http.port | 14000 |端口  |
+|dfs.webhdfs.enabled|true|开启httpfs|
 
 ```
+cloudera manager->hdfs->实例-> 添加角色-> HttpFS角色选择主机
+
+
+简单测试：
 curl -i  "http://127.0.0.1:14000/webhdfs/v1/user/root/?op=LISTSTATUS&user.name=root"
 ```
-# 2 Yarn
+
+# 3 Yarn
+## 3.1.1 YARN 配置
 
 * RAM-per-container is minimum-allocation-mb ，一般设置为1024m.
 
@@ -26,6 +40,7 @@ mapred-site.xml       | mapreduce.map.memory.mb        | RAM-per-container
 mapred-site.xml       | mapreduce.reduce.memory.mb        | 2 * RAM-per-container
 mapred-site.xml       | mapreduce.map.java.opts        | 0.8 * RAM-per-container
 mapred-site.xml       | mapreduce.reduce.java.opts        | 0.8 * 2 * RAM-per-container
+
 
  
 
