--- a/_posts/大数据/2018-07-21-hadoop.md
+++ b/_posts/大数据/2018-07-21-hadoop.md
@@ -25,6 +25,7 @@ curl -i  "http://127.0.0.1:14000/webhdfs/v1/user/root/?op=LISTSTATUS&user.name=r
 
 # 3 Yarn
 ## 3.1.1 YARN 配置
+> cloudera 有一个计算的表格  http://tiny.cloudera.com/yarn-tuning-guide
 
 * RAM-per-container is minimum-allocation-mb ，一般设置为1024m.
 
