--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -87,6 +87,8 @@ cloudera manager->hdfs->实例-> 添加角色-> HttpFS角色选择主机
 简单测试：
 curl -i  "http://127.0.0.1:14000/webhdfs/v1/user/root/?op=LISTSTATUS&user.name=root"
 ```
+#4 Kerberos以及用户管理
+
 # Q&&A
 数据库问题:
 https://community.cloudera.com/t5/Cloudera-Manager-Installation/MySQLSyntaxErrorException-Key-column-REVISION-ID-doesn-t/td-p/69621
