--- a/_posts/运维/grafana/2018-07-23-grafana.md
+++ b/_posts/运维/grafana/2018-07-23-grafana.md
@@ -6,6 +6,52 @@ category: 运维
 > grafana
 
 # 1 概述
+## 1.1 安装
+安装以写好ansible-playbooks后续更新到github地址.
+## 1.2 配置
+### 1.2.1 LDAP
+
+```
+#grafana.ini
+[auth.ldap]
+enabled = true
+config_file = /etc/grafana/ldap.toml
+allow_sign_up = true
+
+#ldap.toml
+ [[servers]]
+ host = "xxxx.com"
+ port = 389
+ use_ssl = false
+ start_tls = false
+ ssl_skip_verify = false
+
+ bind_dn = "CN=xxx,OU=xxx,OU=xxx,DC=xxx,DC=xxx,DC=com"
+
+ search_filter = "(sAMAccountName=%s)"
+
+ search_base_dns = ["ou=xxx,dc=xxx,dc=xxx,dc=com"]
+
+ [servers.attributes]
+ name = "givenName"
+ surname = "sn"
+ username = "sAMAccountName"
+ member_of = "memberOf"
+ email =  "email"
+
+ [[servers.group_mappings]]
+ group_dn = "xxx"
+ org_role = "Admin"
+
+[[servers.group_mappings]]
+group_dn = "*"
+org_role = "Editor"
+
+[[servers.group_mappings]]
+group_dn = "xxxx"
+org_role = "Editor"
+org_id = 1
+```
 # 2 API
 ## 2.2.1 api导出dashboard json文件
 > 背景,因为配置错误，强制保存，导致dashboard页面空白，通过api导出json，重建页面
@@ -40,4 +86,12 @@ category: 运维
 ```
 /usr/share/grafana/public/dashboards/home.json
 ```
+#3 datasource
+![](/assets/img//15456424790894.jpg)
+##3.1 InfluxDB
+![](/assets/img//15456425369483.jpg)
+##3.2 Prometheus
+![](/assets/img//15456426221695.jpg)
 
+## 3.3 ES
+![](/assets/img//15456426980265.jpg)
