--- a/_posts/数学/2018-07-23-概率论.md
+++ b/_posts/数学/2018-07-23-概率论.md
@@ -25,10 +25,14 @@ category: 数学
 |0|0|1|0|
 |1|0|0|1|
 
-$$y = f(x)$$
+$$
+y = f(x)
+$$
 
 贝叶斯公式:
-$$P(A|B)=\frac{P(B|A)P(A)}{P(B)}$$
+$$
+P(A|B)=\frac{P(B|A)P(A)}{P(B)}
+$$
 
 利用贝叶斯公式计算考过概率(不喝酒，不逛街，学习)[0,0,1]
 
