--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -59,7 +59,7 @@ http://xxx/cdh/cdh6/parcels/
 
 ![](/assets/img//15456399268442.jpg)
 
-# 3.2 Yarn 配置
+# 3.2 Yarn
 ## 3.2.1 YARN 内存CPU配置公式
 >  http://tiny.cloudera.com/yarn-tuning-guide
 
@@ -77,7 +77,7 @@ mapred-site.xml       | mapreduce.reduce.memory.mb        | 2 * RAM-per-containe
 mapred-site.xml       | mapreduce.map.java.opts        | 0.8 * RAM-per-container
 mapred-site.xml       | mapreduce.reduce.java.opts        | 0.8 * 2 * RAM-per-container
 
-# 3.3 HDFS配置
+# 3.3 HDFS
 ## 3.3.1 hdfs-web-http
 
 | 配置 | value | 说明  |
@@ -92,6 +92,17 @@ cloudera manager->hdfs->实例-> 添加角色-> HttpFS角色选择主机
 简单测试：
 curl -i  "http://127.0.0.1:14000/webhdfs/v1/user/root/?op=LISTSTATUS&user.name=root"
 ```
+## 3.3.1 hdfs mount
+> 参考文档:https://www.cloudera.com/documentation/enterprise/5-9-x/topics/cdh_ig_hdfs_mountable.html
+
+```
+#如果是通过cloudera manager 安装的集群不需要手动安装hadoop-hdfs-fuse
+直接mount就可以了
+DIR=/cdh && mkdir -p  $DIR
+hadoop-fuse-dfs hdfs://cdh:8020 $DIR
+#如果集群接入了kerberos，需要用户kinit之后才可以看到本地hdfs目录，反之本地hdfs看不到
+```
+
 # 4 Kerberos以及用户管理
 
 # Q&&A
