--- a/_posts/运维/aws/2018-12-25-aws.md
+++ b/_posts/运维/aws/2018-12-25-aws.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-category: 后端
+category: 运维
 ---
 > AWS
 
@@ -14,3 +14,27 @@ aws s3 cp s3://xxx/infoc2.cm.xxx.com/ s3://xxx/wangbokun --recursive --include E
 aws s3 cp s3://xxx/infoc2.cm.xxx.com/ ./ --recursive --exclude "*" --include "E2WJDUAXKAHT4N.2015-08-12-*" --profile kun
 ``` 
 
+# 3 EC2
+## 3.1 ec2
+## 3.2 Volumes
+## 3.2 Elb-Alb
+## 3.3 AMI
+## 3.4 Reserved Instances（RI预留实例）
+## 3.5 Spot Requests (竞价实例)
+# 4 EMR
+# 5 DBS
+## 5.1 RDS
+## 5.2 ElastiCache
+
+# 6 Machine Learning
+## 6.1 Polly
+
+# 7 Network
+## 7.1 VPC
+## 7.2 SubNet
+## 7.3 region 2 region VPC
+# 8 Scurity
+## 8.1 IAM
+# 9 Management Tools
+## 9.1 CloudWatch
+# 10 Lambda
