--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -15,7 +15,7 @@ ssh -fTnN -p 2222 -i /root/.ssh/key -D 0.0.0.0:8157 $User@$Ip
 ```
 ...
 ```
-## 2 Git
+## 1.2 Git
 
 |  名称| 命令 |备注  |
 | --- | --- | --- |
@@ -27,6 +27,28 @@ ssh -fTnN -p 2222 -i /root/.ssh/key -D 0.0.0.0:8157 $User@$Ip
 |提交远程分支|git push origin test  |
 |删除远程分支|git branch -r -d origin/branch-name |
 
+## 1.3  alias
 
+```
+alias cp='cp -i'
+alias egrep='egrep --color=auto'
+alias fgrep='fgrep --color=auto'
+alias grep='grep --color=auto'
+alias l.='ls -d .* --color=auto'
+alias ll='ls -l --color=auto'
+alias ls='ls --color=auto'
+alias mv='mv -i'
+alias rm='rm -i'
+alias which='alias | /usr/bin/which --tty-only --read-alias --show-dot --show-tilde'
+```
+
+# 2 内科参数
+
+```
+* soft nproc 60000
+* hard nproc 60000
+* soft nofile 4194304
+* hard nofile 4194304
+```
 
 
