--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -42,7 +42,7 @@ alias rm='rm -i'
 alias which='alias | /usr/bin/which --tty-only --read-alias --show-dot --show-tilde'
 ```
 
-# 2 内科参数
+# 2 内核参数
 
 ```
 * soft nproc 60000
