--- a/_posts/大数据/2018-11-28-zeppelin.md
+++ b/_posts/大数据/2018-11-28-zeppelin.md
@@ -7,6 +7,28 @@ category: 大数据
 > 
 
 # 1 概述
+# 2 Zeppelin
+## 2.1 安装
+> asnible-playbook URL: 
+
+![-w1416](/assets/img//15468683268346.jpg)
+
+## 2.2 LDAP集成
+## 2.3 Interpreters
+### 2.3.1 python3
+### 2.3.2 bash
+### 2.3.3 md
+### 2.3.4 hive
+### 2.3.5 spark python3
+### 2.3.6 mongodb
+### 2.3.7 cassandra
+### 2.3.8 livy
+### 2.3.9 jdbc
+### 2.3.10 presto
+### 2.3.11 flink
+### 2.3.12 es
+### 2.3.13 hbase
+### 2.3.14 pig
 
 
 # Q&&A
