--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -145,6 +145,50 @@ mapred-site.xml       | mapreduce.map.memory.mb        | RAM-per-container
 mapred-site.xml       | mapreduce.reduce.memory.mb        | 2 * RAM-per-container
 mapred-site.xml       | mapreduce.map.java.opts        | 0.8 * RAM-per-container
 mapred-site.xml       | mapreduce.reduce.java.opts        | 0.8 * 2 * RAM-per-container
+## 3.2.2 Yarn scheduler queue
+
+
+![-w846](/assets/img/15469350195055.jpg)
+![](/assets/img//15469353611646.jpg)
+
+![-w580](/assets/img//15469349264854.jpg)
+
+- 设置root访问控制
+
+![-w1397](/assets/img//15469356489937.jpg)
+![-w837](/assets/img//15469356653564.jpg)
+
+![-w871](/assets/img//15469356805546.jpg)
+
+- 设置 root.default
+
+![-w1420](/assets/img//15469351509733.jpg)
+
+![-w886](/assets/img//15469351835867.jpg)
+
+![-w874](/assets/img//15469352306909.jpg)
+
+- 设置不限制用户
+
+![-w883](/assets/img//15469357617819.jpg)
+
+![-w874](/assets/img//15469357734427.jpg)
+
+- 设置提交job用户白名单
+
+![-w856](/assets/img//15469358916303.jpg)
+
+- 设置管理queue的用户白名单【多个用户用逗号分隔】
+
+![-w859](/assets/img//15469359155499.jpg)
+
+![-w1408](/assets/img//15469360595297.jpg)
+- 删除允许自动创建用户queue
+![-w1419](/assets/img//15469361451964.jpg)
+
+- 打开Yarn scheduler 显示以下界面
+![-w1225](/assets/img//15469363220449.jpg)
+
 
 # 3.3 HDFS
 ## 3.3.1 hdfs-web-http
@@ -174,7 +218,7 @@ hadoop-fuse-dfs hdfs://cdh:8020 $DIR
 
 # 4 Kerberos以及用户管理
 playbooks已实现自动安装，以及主备同步.
-## 4.1.1 cm开始kerberos认证
+## 4.1 cm开始kerberos认证
 ![-w449](/assets/img//15464856090372.jpg)
 
 ![-w1214](/assets/img//15464856363455.jpg)
@@ -204,7 +248,7 @@ playbooks已实现自动安装，以及主备同步.
 
 ![-w1191](/assets/img//15464876539669.jpg)
 
-## 4.1.2 Sentry
+## 4.2 Sentry服务
 ![-w1284](/assets/img//15464877588807.jpg)
 
 ![-w1316](/assets/img//15464878286307.jpg)
@@ -218,7 +262,122 @@ playbooks已实现自动安装，以及主备同步.
 
 ![-w417](/assets/img//15464880561600.jpg)
 
-# 5 Cloudera Manager && S3 
+## 4.3 权限配置
+### 4.3.1 hive  sentry
+![-w1404](/assets/img//15469302171719.jpg)
+
+![-w791](/assets/img//15469375670441.jpg)
+
+![](/assets/img//15469377845069.jpg)
+
+![-w626](/assets/img//15469378555294.jpg)
+
+![-w605](/assets/img//15469378909395.jpg)
+
+- sentry group user
+![-w1087](/assets/img//15469310181327.jpg)
+
+![-w1097](/assets/img//15469310292703.jpg)
+### 4.3.2 HDFS sentry
+
+```
+<property>
+    <name>fs.s3a.access.key</name>
+    <value></value>
+</property>
+
+<property>
+    <name>fs.s3a.secret.key</name>
+    <value></value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.root.groups</name>
+    <value>*</value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.root.hosts</name>
+    <value>*</value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.livy.groups</name>
+    <value>*</value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.livy.hosts</name>
+    <value>*</value>
+</property>
+
+<property>
+    <name>fs.s3a.fast.upload</name>
+    <value>true</value>
+</property>
+
+<property>
+    <name>fs.s3a.fast.upload.buffer</name>
+    <value>disk</value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.zeppelin.groups</name>
+    <value>*</value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.zeppelin.hosts</name>
+    <value>*</value>
+</property>
+
+<property>
+    <name>hadoop.proxyuser.presto.groups</name>
+    <value>*</value>
+</property>
+    
+<property>
+    <name>hadoop.proxyuser.presto.hosts</name>
+    <value>*</value>
+</property>
+```
+![-w1367](/assets/img//15469374198120.jpg)
+
+![-w440](/assets/img//15469377225233.jpg)
+### 4.3.3 Hue sentry
+
+
+```
+预先添加hive_admin 组的权限，用命令行添加权限
+hive的机器上寻找keytab，先找到pid最大的目录
+$ ll /var/run/cloudera-scm-agent/process |grep hive-HIVESERVER2
+$ cd /var/run/cloudera-scm-agent/process/482-hive-HIVESERVER2
+$ ls -al hive.keytab
+-rw-------. 1 hive hive  1570 1月   8 17:01 hive.keytab
+$ kinit -kt hive.keytab hive/xxx@xxx.COM
+
+# 用beeline链接hive
+beeline
+!connect jdbc:hive2://localhost:10000/;principal=hive/xxx.COM;
+create role hive_admin_role;
+grant all on server server1 to role hive_admin_role;
+grant role hive_admin_role to group hive_admin;
+```
+
+![](/assets/img//15469395486417.jpg)
+
+![-w778](/assets/img//15469346615420.jpg)
+
+- 重启服务后，HUE出现Security菜单
+![-w204](/assets/img//15469367135545.jpg)
+
+![-w1142](/assets/img//15469386514019.jpg)
+
+![-w787](/assets/img//15469387221329.jpg)
+
+![-w1124](/assets/img//15469412391614.jpg)
+
+# 5 Cloudera Manager  S3 
 ![-w459](/assets/img//15464881365130.jpg)
 
 
@@ -228,7 +387,7 @@ playbooks已实现自动安装，以及主备同步.
 
 ![-w611](/assets/img//15464882167052.jpg)
 
-![-w903](//assets/img//15464882377187.jpg)
+![-w903](/assets/img//15464882377187.jpg)
 ![-w888](/assets/img//15464902431955.jpg)
 ![-w1295](/assets/img//15464902722481.jpg)
 ![-w1240](/assets/img//15464902829423.jpg)
@@ -250,6 +409,33 @@ s3.cn-north-1.amazonaws.com.cn
 之后提示同步配置，并重启服务.
 ```
 ![-w405](/assets/img//15464906132029.jpg)
+
+# 6 Hue 
+## 6.1 Hue LDAP
+![-w613](/assets/img//15469409673292.jpg)
+
+![](/assets/img//15469344933212.jpg)
+
+![](/assets/img//15469345683527.jpg)
+
+## 6.2 手动导入用户
+![-w1110](/assets/img//15469368094366.jpg)
+ 
+ ![-w541](/assets/img//15469368274187.jpg)
+
+![-w129](/assets/img//15469368413706.jpg)
+- admin group
+![](/assets/img//15469384618009.jpg)
+
+![-w608](/assets/img//15469385068925.jpg)
+
+![-w545](/assets/img//15469370429066.jpg)
+![-w603](/assets/img//15469385438968.jpg)
+
+![-w606](/assets/img//15469385688453.jpg)
+
+![-w600](/assets/img//15469385946608.jpg)
+
 
 # Q&&A
 ## 1. REVISION_ID' doesn't exist in table
@@ -341,4 +527,28 @@ You will need to do that to the following files:
 00043_cmf_schema.mysql.ddl
 04509_cmf_schema.mysql.ddl
 04511_cmf_schema.mysql.ddl
+```
+## 3  ExitCodeException exitCode=24: Invalid conf file provided : /etc/hadoop/conf.cloudera.yarn/container-executor.cfg
+
+```
+INFO org.apache.hadoop.service.AbstractService: Service NodeManager failed in state INITED; cause: org.apache.hadoop.yarn.exceptions.YarnRuntimeException: Failed to initialize container executor
+org.apache.hadoop.yarn.exceptions.YarnRuntimeException: Failed to initialize container executor
+        at org.apache.hadoop.yarn.server.nodemanager.NodeManager.serviceInit(NodeManager.java:269)
+        at org.apache.hadoop.service.AbstractService.init(AbstractService.java:163)
+        at org.apache.hadoop.yarn.server.nodemanager.NodeManager.initAndStartNodeManager(NodeManager.java:562)
+        at org.apache.hadoop.yarn.server.nodemanager.NodeManager.main(NodeManager.java:609)
+Caused by: java.io.IOException: Linux container executor not configured properly (error=24)
+        at org.apache.hadoop.yarn.server.nodemanager.LinuxContainerExecutor.init(LinuxContainerExecutor.java:199)
+        at org.apache.hadoop.yarn.server.nodemanager.NodeManager.serviceInit(NodeManager.java:267)
+        ... 3 more
+Caused by: ExitCodeException exitCode=24: Invalid conf file provided : /etc/hadoop/conf.cloudera.yarn/container-executor.cfg
+```
+【解决办法】
+
+![-w1028](/assets/img/15482342524898.jpg)
+
+```
+$chmod 6050 ./cloudera/parcels/CDH-5.15.1-1.cdh5.15.1.p0.4/lib/hadoop-yarn/bin/container-executor
+---Sr-s---. 1 root yarn 53728 8月  10 02:14 ./cloudera/parcels/CDH-5.15.1-1.cdh5.15.1.p0.4/lib/hadoop-yarn/bin/container-executor
+----r-x---. 1 root yarn 53728 1月  23 16:31 ./cloudera/parcels/CDH-5.15.1-1.cdh5.15.1.p0.4/lib/hadoop-yarn/bin/container-executor.20190123
 ```
