--- a/_posts/运维/aws/2018-12-25-aws.md
+++ b/_posts/运维/aws/2018-12-25-aws.md
@@ -13,7 +13,65 @@ aws s3 cp s3://xxxx/infoc2.cm.xxx.com/ ./ --recursive --include "E2WJDUAXKAHT4N.
 aws s3 cp s3://xxx/infoc2.cm.xxx.com/ s3://xxx/wangbokun --recursive --include E2WJDUAXKAHT4N.2015-08-12-*.gz --exclude *
 aws s3 cp s3://xxx/infoc2.cm.xxx.com/ ./ --recursive --exclude "*" --include "E2WJDUAXKAHT4N.2015-08-12-*" --profile kun
 ``` 
+## 2.1.2 S3 权限
 
+```
+{
+    "Version": "2012-10-17",
+    "Statement": [
+        {
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws-cn:iam::xxxxxxx:user/$user"
+            },
+            "Action": [
+                "s3:ListBucket",
+                "s3:GetObject",
+                "s3:PutObject",
+                "s3:DeleteObject"
+            ],
+            "Resource": [
+                "arn:aws-cn:s3:::$bucket/*",
+                "arn:aws-cn:s3:::$bucket"
+            ],
+            "Condition": {
+                "StringEquals": {
+                    "aws:SourceVpce": [
+                        "vpce-xxxxx",
+                        "vpce-xxx"
+                    ]
+                }
+            }
+        },
+        {
+            "Effect": "Allow",
+            "Principal": {
+                "AWS": "arn:aws-cn:iam::xxxxxxx:user/$user"
+            },
+            "Action": [
+                "s3:ListBucket",
+                "s3:GetObject",
+                "s3:PutObject",
+                "s3:DeleteObject"
+            ],
+            "Resource": [
+                "arn:aws-cn:s3:::$bucket/*",
+                "arn:aws-cn:s3:::$bucket"
+            ],
+            "Condition": {
+                "IpAddress": {
+                    "aws:SourceIp": [
+                        "10.10.10.10/32",
+                        "10.10.10.10/32",
+                        "10.10.10.10/32",
+                        "10.10.10.10/32"
+                    ]
+                }
+            }
+        }
+    ]
+}
+```
 # 3 EC2
 ## 3.1 ec2
 ## 3.2 Volumes
