--- a/_posts/大数据/2018-07-31-Presto.md
+++ b/_posts/大数据/2018-07-31-Presto.md
@@ -137,7 +137,7 @@ presto/bin/launcher run/start
 ## 2.1.4 client
 
 ```
-wegt https://repo1.maven.org/maven2/com/facebook/presto/presto-cli/0.205/presto-cli-0.205-executable.jar
+wget https://repo1.maven.org/maven2/com/facebook/presto/presto-cli/0.205/presto-cli-0.205-executable.jar
 mv presto-cli-0.205-executable.jar presto-cli&& chmod 755 presto-cli
 
 
@@ -197,3 +197,7 @@ hive.max-partitions-per-scan=100
 ![](/assets/img/15356136674740.jpg)
 
 
+# 4 性能测试
+## 4.1 presto hive 
+![-w1157](/assets/img//15525524092409.jpg)
+![](/assets/img//15525524368773.jpg)
