--- a/_posts/大数据/2018-07-31-Presto.md
+++ b/_posts/大数据/2018-07-31-Presto.md
@@ -15,6 +15,8 @@ Presto是由Facebook开源，完全基于内存的并行计算以及分布式SQL
 Presto是一个运行在多台服务器上的分布式系统。 完整安装包括一个coordinator和多个worker。 由客户端提交查询，从Presto命令行CLI提交到coordinator。 coordinator进行解析，分析并执行查询计划，然后分发处理队列到worker。
 ![](/assets/img/15331762381049.jpg)
 
+![](/assets/img//15525532671634.jpg)
+
 # 2 Presto Hive 【CDH5】
 
 
