--- a/_posts/物联网/树莓派/2019-03-18-树莓派.md
+++ b/_posts/物联网/树莓派/2019-03-18-树莓派.md
@@ -215,3 +215,54 @@ pi@raspberrypi:/var $ sudo cat /etc/fstab
 mkdir /ram
 mount -t tmpfs -o size=10m,mode=0777 tmpfs /ram
 ```
+## 1.7 查找局域网树莓派的ip地址
+
+```
+方法一
+➜  ~ ping raspberrypi.local
+PING raspberrypi.local (10.111.161.210): 56 data bytes
+64 bytes from 10.111.161.210: icmp_seq=0 ttl=64 time=86.265 ms
+64 bytes from 10.111.161.210: icmp_seq=1 ttl=64 time=171.123 ms
+64 bytes from 10.111.161.210: icmp_seq=2 ttl=64 time=7.914 ms
+
+ssh pi@10.111.161.210
+
+方法二：
+sudo nmap -sP 192.168.1.0/24 | awk '/^Nmap/{ip=$NF}/B8:27:EB/{print ip}'
+```
+## 1.8 vnc
+
+
+```
+sudo raspi-config
+#选择5
+```
+![-w561](/assets/img//15530786871151.jpg)
+
+![-w562](/assets/img//15530787351117.jpg)
+
+![-w424](/assets/img//15530787539360.jpg)
+
+![-w422](/assets/img//15530787778652.jpg)
+
+![-w560](/assets/img//15530788067290.jpg)
+
+![-w415](/assets/img//15530788281339.jpg)
+
+
+```
+下载vnc客户端:
+#https://www.realvnc.com/en/connect/download/vnc/macos/
+
+vncserver
+```
+![-w1149](/assets/img//15530789293422.jpg)
+
+![-w593](/assets/img//15530818649221.jpg)
+![-w123](/assets/img//15530818926571.jpg)
+![-w893](/assets/img//15530819223866.jpg)
+
+
+```
+输入用户名密码，便可登录
+```
