--- a/_posts/物联网/树莓派/2019-03-18-树莓派.md
+++ b/_posts/物联网/树莓派/2019-03-18-树莓派.md
@@ -266,3 +266,12 @@ vncserver
 ```
 输入用户名密码，便可登录
 ```
+
+# 2 
+## 2.1 type-c
+![](/assets/img//15531467412721.jpg)
+
+## 2.2 usb
+![](/assets/img//15531470513407.jpg)
+
+![](/assets/img//15531470173788.jpg)
