--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -435,8 +435,16 @@ s3.cn-north-1.amazonaws.com.cn
 ![-w606](/assets/img//15469385688453.jpg)
 
 ![-w600](/assets/img//15469385946608.jpg)
+# 7 HDFS
+# 7.1 hdfs File ACL
 
 
+```
+
+hdfs dfs -setfacl -m  -R  group:$user:r-x  /xxx
+
+hdfs dfs -setfacl -m  default:group:$user:r- /xx
+```
 # Q&&A
 ## 1. REVISION_ID' doesn't exist in table
 数据库问题:
