--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -42,6 +42,13 @@ alias rm='rm -i'
 alias which='alias | /usr/bin/which --tty-only --read-alias --show-dot --show-tilde'
 ```
 
+## 1.4 awk
+
+```
+#截取第N列之后所有列的数据
+cat filename | awk -F " "  '{for (i=4;i<=NF;i++)printf("%s ", $i);print ""}'
+```
+
 # 2 内核参数
 
 ```
