--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -377,6 +377,8 @@ grant role hive_admin_role to group hive_admin;
 
 ![-w1124](/assets/img//15469412391614.jpg)
 
+
+
 # 5 Cloudera Manager  S3 
 ![-w459](/assets/img//15464881365130.jpg)
 
@@ -443,8 +445,10 @@ s3.cn-north-1.amazonaws.com.cn
 
 hdfs dfs -setfacl -m  -R  group:$user:r-x  /xxx
 
-hdfs dfs -setfacl -m  default:group:$user:r- /xx
+hdfs dfs -setfacl -m -R  default:group:$user:r- /xx
 ```
+
+
 # Q&&A
 ## 1. REVISION_ID' doesn't exist in table
 数据库问题:
