--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -57,5 +57,49 @@ cat filename | awk -F " "  '{for (i=4;i<=NF;i++)printf("%s ", $i);print ""}'
 * soft nofile 4194304
 * hard nofile 4194304
 ```
+# 3 Pam
+# 3.1  pam_succeed allow user1  to "su - user2"
+>需求描述
+>机器有N个用户，不同用户隶属不通goup，group-user有权限做一些事情所以需要，组内用户>可以免密码su到group-user，并且用户不配置密码
+
+```
+p-user  p-group
+user1   group1 p-group
+user2   group2 p-group
+配置文件/etc/pam.d/su
+#配置一：user1/2 可以"su - p-user", user1 属于组group1 和 p-group
+#打开这行注释
+auth            sufficient      pam_rootok.so
+auth       [success=ignore default=1] pam_succeed_if.so user = p-user
+auth       sufficient   pam_succeed_if.so use_uid user ingroup p-group
 
 
+p-user  p-group
+user1   group1
+#配置二： user1 可以免密码 "su - p-user"
+auth            sufficient      pam_rootok.so
+auth       [success=ignore default=1] pam_succeed_if.so user = p-user
+auth       sufficient   pam_succeed_if.so use_uid user = user1
+```
+# 3.2  pam_wheel
+>描述：
+>有些时候需要系统中的部分用户可以su root，及时有些用户su root后密码输入正确，也不让他su成功，就需要以下配置
+
+```
+一：
+vim /etc/pam.d/su
+#打开注释
+auth           required        pam_wheel.so use_uid
+
+二：
+修改/etc/login.defs文件,可以新建一个用户，再su登陆发现无法正常su过去，通过如下的命令将用户加入到wheel组后，其可以正常su登陆。
+
+echo "SU_WHEEL_ONLY yes" >> /etc/login.defs
+
+三:
+usermod -G wheel 用户名
+
+四：
+vim /etc/pam.d/su
+auth required /lib/security/pam_wheel.so group=test
+```
