--- a/_posts/大数据/2018-11-28-zeppelin.md
+++ b/_posts/大数据/2018-11-28-zeppelin.md
@@ -20,6 +20,27 @@ category: 大数据
 ### 2.3.3 md
 ### 2.3.4 hive
 ### 2.3.5 spark python3
+#### 2.3.5.1 py3
+![](/assets/img//15577329957508.jpg)
+#### 2.3.5.2 pyspark matplotlib
+
+```
+#matplotlib
+%pyspark
+from matplotlib import pyplot as plt
+from celluloid import Camera
+
+fig = plt.figure()
+camera = Camera(fig)
+for i in range(10):
+    plt.plot([i] * 10)
+    camera.snap()
+animation = camera.animate()
+
+print("%html", animation.to_jshtml())
+```
+![-w1395](/assets/img//15577330747972.jpg)
+
 ### 2.3.6 mongodb
 ### 2.3.7 cassandra
 ### 2.3.8 livy
