--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -249,6 +249,11 @@ playbooks已实现自动安装，以及主备同步.
 ![-w1191](/assets/img//15464876539669.jpg)
 
 ## 4.2 Sentry服务
+
+> 命令参考 
+> https://www.cloudera.com/documentation/enterprise/5-8-x/topics/impala_show.html
+> https://www.cnblogs.com/bugsbunny/p/7097958.html
+
 ![-w1284](/assets/img//15464877588807.jpg)
 
 ![-w1316](/assets/img//15464878286307.jpg)
@@ -445,7 +450,7 @@ s3.cn-north-1.amazonaws.com.cn
 
 hdfs dfs -setfacl -m  -R  group:$user:r-x  /xxx
 
-hdfs dfs -setfacl -m -R  default:group:$user:r- /xx
+hdfs dfs -setfacl -m -R  default:group:$user:r-x /xx
 ```
 
 
