--- a/_posts/大数据/2019-03-21-hue.md
+++ b/_posts/大数据/2019-03-21-hue.md
@@ -3,3 +3,22 @@ layout: post
 category: 大数据
 ---
 > Hue
+
+# 1 概述
+
+# 2 配置
+# 2.1 Nginx代理上传文件大小限制
+
+```
+
+server {
+        listen 80;
+        server_name hue.xxx.com;
+
+        location / {
+                proxy_pass xxxxx:8889;
+                #设置上传文件大小限制
+                client_max_body_size 5000M;
+        }
+}
+```
