--- a/_posts/后端/nginx/2018-07-21-Nginx.md
+++ b/_posts/后端/nginx/2018-07-21-Nginx.md
@@ -159,6 +159,16 @@ exit 0
     }
  }
 ```
+## 1.5  域名跳转
+
+```
+# 访问aaa.com 自动跳转到bbb.com
+server {
+        listen 80;
+        server_name aaa.com;
+	     rewrite  ^/(.*)$  http://bbb.com/$1 permanent;
+}
+```
 
 # 2 https 免费证书
 ## 2.1 下载 certbot 
