--- a/_posts/大数据/2018-12-18-hive.md
+++ b/_posts/大数据/2018-12-18-hive.md
@@ -58,5 +58,16 @@ hive> !pwd;
 # 5 权限管理
 
 # 6 Kerberos
+# 7 Hive dependence jar
+## 7.1 hive-json-serde
+https://github.com/rcongiu/Hive-JSON-Serde
+
+配置
+<name>hive.aux.jars.path</name>
+![](/assets/img//15603135898933.jpg)
+
+![-w759](/assets/img//15603136477090.jpg)
+
+![-w1092](/assets/img//15603137954325.jpg)
 
 # Q&A
