--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -448,9 +448,13 @@ s3.cn-north-1.amazonaws.com.cn
 
 ```
 
-hdfs dfs -setfacl -m  -R  group:$user:r-x  /xxx
+#修改历史数据读
+hdfs dfs -setfacl -m  -R  group:$user:r-x  /xxx 
 
+
+#修改default，后进入新数据读
 hdfs dfs -setfacl -m -R  default:group:$user:r-x /xx
+
 ```
 
 
