--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -58,7 +58,7 @@ cat filename | awk -F " "  '{for (i=4;i<=NF;i++)printf("%s ", $i);print ""}'
 * hard nofile 4194304
 ```
 # 3 Pam
-# 3.1  pam_succeed allow user1  to "su - user2"
+## 3.1  pam_succeed allow user1  to "su - user2"
 >需求描述
 >机器有N个用户，不同用户隶属不通goup，group-user有权限做一些事情所以需要，组内用户>可以免密码su到group-user，并且用户不配置密码
 >http://www.361way.com/pam-limit-user-login/4269.html
@@ -82,8 +82,21 @@ user1   group1
 auth            sufficient      pam_rootok.so
 auth       [success=ignore default=1] pam_succeed_if.so user = p-user
 auth       sufficient   pam_succeed_if.so use_uid user = user1
+
+
+
+例子二：
+#需求描述，同一台机器两组用户group1和group2， group1的用户可以su group1组，group2的用户可以su group2，配置如下:
+
+auth		sufficient	pam_rootok.so
+auth       [success=ignore default=2] pam_succeed_if.so user = swc.sas.nsc
+auth       [success=ignore default=1]   pam_succeed_if.so  use_uid user ingroup $group1
+auth       [success=done default=ignore]  pam_permit.so
+auth       [success=ignore default=2]     pam_succeed_if.so user = swc.sas
+auth       [success=ignore default=1]     pam_succeed_if.so use_uid user ingroup $group2
+auth       [success=done default=ignore]  pam_permit.so
 ```
-# 3.2  pam_wheel
+## 3.2  pam_wheel
 >描述：
 >有些时候需要系统中的部分用户可以su root，及时有些用户su root后密码输入正确，也不让他su成功，就需要以下配置
 
@@ -105,3 +118,4 @@ usermod -G wheel 用户名
 vim /etc/pam.d/su
 auth required /lib/security/pam_wheel.so group=test
 ```
+## 3.3
