--- a/_posts/后端/golang/2018-08-07-go语言.md
+++ b/_posts/后端/golang/2018-08-07-go语言.md
@@ -11,3 +11,94 @@ category: 后端
 - go知识图谱 https://www.processon.com/view/link/5a9ba4c8e4b0a9d22eb3bdf0
 - http://www.opscoder.info/
 
+## 1.1 goproxy
+
+```
+export GOPROXY=https://goproxy.io
+or
+https://github.com/gpmgo/gopm
+```
+
+# 2 工具
+## 2.1 go swagger
+>editor swagger: http://editor.swagger.io/
+ 
+```
+go get -u github.com/swaggo/swag/cmd/swag
+cd $GOPATH/src/github.com/swaggo/swag/cmd/swag
+go install
+
+➜  wag
+NAME:
+   swag - Automatically generate RESTful API documentation with Swagger 2.0 for Go.
+
+USAGE:
+   swag [global options] command [command options] [arguments...]
+
+VERSION:
+   v1.6.2
+
+COMMANDS:
+     init, i  Create docs.go
+     help, h  Shows a list of commands or help for one command
+
+GLOBAL OPTIONS:
+   --help, -h     show help
+   --version, -v  print the version
+   
+   
+git clone https://github.com/swagger-api/swagger-ui
+编译后的目录可直接接入项目的静态目录下
+swagger-ui/dist
+
+cp -r  swagger-ui/dist  $project_path/web/staic/help
+```
+
+
+
+```
+#测试go代码
+package main
+
+import (
+	"flag"
+	"log"
+	"net/http"
+	
+)
+
+// @title Rango API
+// @version 0.1
+// @tag.name decision
+// @tag.description decision
+// @tag.name action
+// @tag.description action
+// @tag.name policy
+// @tag.description policy
+// @description Rango is a powerful and efficient access control system.
+// @contact.name API Support
+// @contact.email bokun.wang@gmail.com
+// host 127.0.0.1:8000
+// @BasePath
+func main() {
+	port := flag.String("p", "8100", "port to serve on")
+	directory := flag.String("d", ".", "the directory of static file to host")
+	flag.Parse()
+
+	http.Handle("/", http.FileServer(http.Dir(*directory)))
+
+	log.Printf("Serving %s on HTTP port: %s\n", *directory, *port)
+	log.Fatal(http.ListenAndServe(":"+*port, nil))
+}
+```
+
+- 最终目录结构
+![](/assets/img//15628976402197.jpg)
+
+```
+go run main.go -p 80
+```
+![](/assets/img//15628976830250.jpg)
+
+## 2.2 swagger语法
+> 参考:https://github.com/swaggo/swag
