--- a/_posts/后端/linux/2019-01-04-Linux.md
+++ b/_posts/后端/linux/2019-01-04-Linux.md
@@ -118,4 +118,14 @@ usermod -G wheel 用户名
 vim /etc/pam.d/su
 auth required /lib/security/pam_wheel.so group=test
 ```
-## 3.3
+# Q&&A
+## 1 mac升级后编码错误
+
+```
+【问题描述】
+-bash: 警告:setlocale: LC_CTYPE: 无法改变区域选项 (UTF-8): 没有那个文件或目录
+
+【解决方案】
+sudo vim /etc/ssh/ssh_config
+注释掉   SendEnv LANG LC_*
+```
