--- a/_posts/大数据/2018-12-24-cdh.md
+++ b/_posts/大数据/2018-12-24-cdh.md
@@ -443,7 +443,72 @@ s3.cn-north-1.amazonaws.com.cn
 
 ![-w600](/assets/img//15469385946608.jpg)
 # 7 HDFS
-# 7.1 hdfs File ACL
+## 7.1 hadoop fs
+### 7.1.1 appendToFile
+```
+[~]$ echo a > a
+[~]$ echo b > b
+[~]$ hadoop fs -appendToFile b appendToFile/a 
+[~]$ hadoop fs -cat  appendToFile/a
+a
+b
+```
+### 7.1.2 checksum
+```
+[~]$ hadoop fs -checksum  appendToFile/a
+appendToFile/a	MD5-of-0MD5-of-512CRC32C	000002000000000000000000b0a41fe649f3230d9e76f743d1345b2a
+```
+### 7.1.3 chgrp chmod chown
+  [-chgrp [-R] GROUP PATH...]
+	[-chmod [-R] <MODE[,MODE]... | OCTALMODE> PATH...]
+	[-chown [-R] [OWNER][:[GROUP]] PATH...]
+	[-copyFromLocal [-f] [-p] [-l] <localsrc> ... <dst>]
+	[-copyToLocal [-p] [-ignoreCrc] [-crc] <src> ... <localdst>]
+	[-count [-q] [-h] [-v] [-x] <path> ...]
+	[-cp [-f] [-p | -p[topax]] <src> ... <dst>]
+	[-df [-h] [<path> ...]]
+	[-du [-s] [-h] [-x] <path> ...]
+	
+### 7.1.4 snapshot
+	[-createSnapshot <snapshotDir> [<snapshotName>]]
+	[-deleteSnapshot <snapshotDir> <snapshotName>]
+```
+[~]$ hadoop fs -createSnapshot  appendToFile/ bk_test
+createSnapshot: Directory is not a snapshottable directory: /user/bokun.wang/appendToFile
+```
+
+### 7.1.5 expunge 清空回收站
+	[-expunge]
+	```
+	hadoop fs -expunge
+	```
+	
+	[-find <path> ... <expression> ...]
+	[-get [-p] [-ignoreCrc] [-crc] <src> ... <localdst>]
+	[-getfacl [-R] <path>]
+	[-getfattr [-R] {-n name | -d} [-e en] <path>]
+	[-getmerge [-nl] <src> <localdst>]
+	[-help [cmd ...]]
+	[-ls [-C] [-d] [-h] [-q] [-R] [-t] [-S] [-r] [-u] [<path> ...]]
+	[-mkdir [-p] <path> ...]
+	[-moveFromLocal <localsrc> ... <dst>]
+	[-moveToLocal <src> <localdst>]
+	[-mv <src> ... <dst>]
+	[-put [-f] [-p] [-l] <localsrc> ... <dst>]
+	[-renameSnapshot <snapshotDir> <oldName> <newName>]
+	[-rm [-f] [-r|-R] [-skipTrash] <src> ...]
+	[-rmdir [--ignore-fail-on-non-empty] <dir> ...]
+	[-setfacl [-R] [{-b|-k} {-m|-x <acl_spec>} <path>]|[--set <acl_spec> <path>]]
+	[-setfattr {-n name [-v value] | -x name} <path>]
+	[-setrep [-R] [-w] <rep> <path> ...]
+	[-stat [format] <path> ...]
+	[-tail [-f] <file>]
+	[-test -[defsz] <path>]
+	[-text [-ignoreCrc] <src> ...]
+	[-touchz <path> ...]
+	[-usage [cmd ...]]
+ 
+## 7.2 hdfs File ACL
 
 
 ```
